--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,17 @@
+attrs>=20.2.0
 click>=7.1.2
 colored>=1.4.2
+iniconfig>=1.0.1
+numpy>=1.19.2
+packaging>=20.4
+pandas>=1.1.3
+pluggy>=0.13.1
 psutil>=5.7.2
+py>=1.9.0
+pyparsing>=2.4.7
+pytest>=6.1.1
+python-dateutil>=2.8.1
+pytz>=2020.1
+six>=1.15.0
+toml>=0.10.1
+-e git+https://github.com/bexxmodd/vizex.git@88bd970bb6e3a406db8b8ccdc34df9c4149635e8#egg=vizex
