--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
 attrs>=20.2.0
+build>=0.3.1.post1
 click>=7.1.2
 colored>=1.4.2
 iniconfig>=1.0.1
+isort>=5.8.0
+lazy-object-proxy>=1.6.0
+mccabe>=0.6.1
 numpy>=1.19.2
 packaging>=20.4
 pandas>=1.1.3
 pluggy>=0.13.1
 psutil>=5.7.2
 py>=1.9.0
-pyparsing>=2.4.7
 pytest>=6.1.1
 python-dateutil>=2.8.1
 python-magic>=0.4.18
